dqo/relational/sql/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASC
    CASE
    DESC
    END
    THEN
    WHEN

Grammar

Rule 0     S' -> query
Rule 1     query -> select
Rule 2     query -> LP query RP
Rule 3     select -> SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list LIMIT NUMBER
Rule 4     select -> SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list
Rule 5     select -> SELECT list FROM table WHERE predicates GROUP BY list ORDER BY list LIMIT NUMBER
Rule 6     select -> SELECT list FROM table WHERE predicates GROUP BY list ORDER BY list
Rule 7     select -> SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates LIMIT NUMBER
Rule 8     select -> SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates
Rule 9     select -> SELECT list FROM table WHERE predicates GROUP BY list LIMIT NUMBER
Rule 10    select -> SELECT list FROM table WHERE predicates ORDER BY list LIMIT NUMBER
Rule 11    select -> SELECT list FROM table WHERE predicates ORDER BY list
Rule 12    select -> SELECT list FROM table WHERE predicates GROUP BY list
Rule 13    select -> SELECT list FROM table WHERE predicates LIMIT NUMBER
Rule 14    select -> SELECT list FROM table WHERE predicates
Rule 15    select -> SELECT list FROM table GROUP BY list HAVING predicates LIMIT NUMBER
Rule 16    select -> SELECT list FROM table GROUP BY list LIMIT NUMBER
Rule 17    select -> SELECT list FROM table ORDER BY list LIMIT NUMBER
Rule 18    select -> SELECT list FROM table GROUP BY list HAVING predicates
Rule 19    select -> SELECT list FROM table GROUP BY list
Rule 20    select -> SELECT list FROM table ORDER BY list
Rule 21    select -> SELECT list FROM table LIMIT NUMBER
Rule 22    select -> SELECT list FROM table
Rule 23    table -> NAME
Rule 24    table -> LP query RP
Rule 25    table -> NAME AS NAME
Rule 26    table -> table AS NAME
Rule 27    table -> table COMMA table
Rule 28    predicates -> condition
Rule 29    predicates -> LP condition RP
Rule 30    predicates -> LP predicates AND predicates RP
Rule 31    predicates -> LP predicates OR predicates RP
Rule 32    predicates -> predicates AND predicates
Rule 33    predicates -> predicates OR predicates
Rule 34    numeric -> NUMBER
Rule 35    numeric -> NUMBER DOT NUMBER
Rule 36    numeric -> numeric PLUS numeric
Rule 37    numeric -> numeric PRODUCT numeric
Rule 38    numeric -> numeric DIV numeric
Rule 39    numeric -> numeric MINUS numeric
Rule 40    numeric -> LP numeric RP
Rule 41    condition -> NAME operator numeric
Rule 42    condition -> numeric operator NAME
Rule 43    condition -> numeric operator numeric
Rule 44    condition -> NAME operator agg
Rule 45    condition -> NAME operator NAME
Rule 46    condition -> NAME operator QTEXT
Rule 47    condition -> QTEXT operator NAME
Rule 48    condition -> list operator list
Rule 49    condition -> list operator NUMBER
Rule 50    condition -> NAME LIKE QTEXT
Rule 51    condition -> NAME NOT LIKE QTEXT
Rule 52    condition -> NAME IS NULL
Rule 53    condition -> NAME IS NOT NULL
Rule 54    condition -> NAME IS TRUE
Rule 55    condition -> NAME IS FALSE
Rule 56    condition -> NAME EQ TRUE
Rule 57    condition -> NAME EQ FALSE
Rule 58    condition -> NAME EXLM EQ TRUE
Rule 59    condition -> NAME EXLM EQ FALSE
Rule 60    condition -> NAME IS NOT TRUE
Rule 61    condition -> NAME IS NOT FALSE
Rule 62    condition -> NAME BETWEEN NUMBER AND NUMBER
Rule 63    condition -> NAME BETWEEN QTEXT AND QTEXT
Rule 64    condition -> NAME IN LP query RP
Rule 65    condition -> NAME IN LP list RP
Rule 66    operator -> GT
Rule 67    operator -> LT
Rule 68    operator -> EQ
Rule 69    operator -> GT EQ
Rule 70    operator -> LT EQ
Rule 71    operator -> EXLM EQ
Rule 72    agg -> SUM LP NAME RP
Rule 73    agg -> AVG LP NAME RP
Rule 74    agg -> COUNT LP NAME RP
Rule 75    agg -> MIN LP NAME RP
Rule 76    agg -> MAX LP NAME RP
Rule 77    agg -> COUNT LP PRODUCT RP
Rule 78    agg -> agg AS NAME
Rule 79    list -> PRODUCT
Rule 80    list -> NAME
Rule 81    list -> NUMBER
Rule 82    list -> NUMBER COMMA NUMBER
Rule 83    list -> NAME COMMA NAME
Rule 84    list -> QTEXT
Rule 85    list -> DQUOTES list DQUOTES
Rule 86    list -> QUOTES list QUOTES
Rule 87    list -> NAME AS NAME
Rule 88    list -> NAME DOT NAME
Rule 89    list -> list COMMA list
Rule 90    list -> list AND NAME
Rule 91    list -> list OR NAME
Rule 92    list -> agg

Terminals, with rules where they appear

AND                  : 30 32 62 63 90
AS                   : 25 26 78 87
ASC                  : 
AVG                  : 73
BETWEEN              : 62 63
BY                   : 3 3 4 4 5 5 6 6 7 8 9 10 11 12 15 16 17 18 19 20
CASE                 : 
COMMA                : 27 82 83 89
COUNT                : 74 77
DESC                 : 
DIV                  : 38
DOT                  : 35 88
DQUOTES              : 85 85
END                  : 
EQ                   : 56 57 58 59 68 69 70 71
EXLM                 : 58 59 71
FALSE                : 55 57 59 61
FROM                 : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
GROUP                : 3 4 5 6 7 8 9 12 15 16 18 19
GT                   : 66 69
HAVING               : 3 4 7 8 15 18
IN                   : 64 65
IS                   : 52 53 54 55 60 61
LIKE                 : 50 51
LIMIT                : 3 5 7 9 10 13 15 16 17 21
LP                   : 2 24 29 30 31 40 64 65 72 73 74 75 76 77
LT                   : 67 70
MAX                  : 76
MIN                  : 75
MINUS                : 39
NAME                 : 23 25 25 26 41 42 44 45 45 46 47 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 72 73 74 75 76 78 80 83 83 87 87 88 88 90 91
NOT                  : 51 53 60 61
NULL                 : 52 53
NUMBER               : 3 5 7 9 10 13 15 16 17 21 34 35 35 49 62 62 81 82 82
OR                   : 31 33 91
ORDER                : 3 4 5 6 10 11 17 20
PLUS                 : 36
PRODUCT              : 37 77 79
QTEXT                : 46 47 50 51 63 63 84
QUOTES               : 86 86
RP                   : 2 24 29 30 31 40 64 65 72 73 74 75 76 77
SELECT               : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
SUM                  : 72
THEN                 : 
TRUE                 : 54 56 58 60
WHEN                 : 
WHERE                : 3 4 5 6 7 8 9 10 11 12 13 14
error                : 

Nonterminals, with rules where they appear

agg                  : 44 78 92
condition            : 28 29
list                 : 3 3 3 4 4 4 5 5 5 6 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 15 15 16 16 17 17 18 18 19 19 20 20 21 22 48 48 49 65 85 86 89 89 90 91
numeric              : 36 36 37 37 38 38 39 39 40 41 42 43 43
operator             : 41 42 43 44 45 46 47 48 49
predicates           : 3 3 4 4 5 6 7 7 8 8 9 10 11 12 13 14 15 18 30 30 31 31 32 32 33 33
query                : 2 24 64 0
select               : 1
table                : 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 26 27 27

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list LIMIT NUMBER
    (4) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list
    (5) select -> . SELECT list FROM table WHERE predicates GROUP BY list ORDER BY list LIMIT NUMBER
    (6) select -> . SELECT list FROM table WHERE predicates GROUP BY list ORDER BY list
    (7) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates LIMIT NUMBER
    (8) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates
    (9) select -> . SELECT list FROM table WHERE predicates GROUP BY list LIMIT NUMBER
    (10) select -> . SELECT list FROM table WHERE predicates ORDER BY list LIMIT NUMBER
    (11) select -> . SELECT list FROM table WHERE predicates ORDER BY list
    (12) select -> . SELECT list FROM table WHERE predicates GROUP BY list
    (13) select -> . SELECT list FROM table WHERE predicates LIMIT NUMBER
    (14) select -> . SELECT list FROM table WHERE predicates
    (15) select -> . SELECT list FROM table GROUP BY list HAVING predicates LIMIT NUMBER
    (16) select -> . SELECT list FROM table GROUP BY list LIMIT NUMBER
    (17) select -> . SELECT list FROM table ORDER BY list LIMIT NUMBER
    (18) select -> . SELECT list FROM table GROUP BY list HAVING predicates
    (19) select -> . SELECT list FROM table GROUP BY list
    (20) select -> . SELECT list FROM table ORDER BY list
    (21) select -> . SELECT list FROM table LIMIT NUMBER
    (22) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 1
    select                         shift and go to state 2

state 1

    (0) S' -> query .



state 2

    (1) query -> select .

    $end            reduce using rule 1 (query -> select .)
    RP              reduce using rule 1 (query -> select .)


state 3

    (2) query -> LP . query RP
    (1) query -> . select
    (2) query -> . LP query RP
    (3) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list LIMIT NUMBER
    (4) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list
    (5) select -> . SELECT list FROM table WHERE predicates GROUP BY list ORDER BY list LIMIT NUMBER
    (6) select -> . SELECT list FROM table WHERE predicates GROUP BY list ORDER BY list
    (7) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates LIMIT NUMBER
    (8) select -> . SELECT list FROM table WHERE predicates GROUP BY list HAVING predicates
    (9) select -> . SELECT list FROM table WHERE predicates GROUP BY list LIMIT NUMBER
    (10) select -> . SELECT list FROM table WHERE predicates ORDER BY list LIMIT NUMBER
    (11) select -> . SELECT list FROM table WHERE predicates ORDER BY list
    (12) select -> . SELECT list FROM table WHERE predicates GROUP BY list
    (13) select -> . SELECT list FROM table WHERE predicates LIMIT NUMBER
    (14) select -> . SELECT list FROM table WHERE predicates
    (15) select -> . SELECT list FROM table GROUP BY list HAVING predicates LIMIT NUMBER
    (16) select -> . SELECT list FROM table GROUP BY list LIMIT NUMBER
    (17) select -> . SELECT list FROM table ORDER BY list LIMIT NUMBER
    (18) select -> . SELECT list FROM table GROUP BY list HAVING predicates
    (19) select -> . SELECT list FROM table GROUP BY list
    (20) select -> . SELECT list FROM table ORDER BY list
    (21) select -> . SELECT list FROM table LIMIT NUMBER
    (22) select -> . SELECT list FROM table

    LP              shift and go to state 3
    SELECT          shift and go to state 4

    query                          shift and go to state 5
    select                         shift and go to state 2

state 4

    (3) select -> SELECT . list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list LIMIT NUMBER
    (4) select -> SELECT . list FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list
    (5) select -> SELECT . list FROM table WHERE predicates GROUP BY list ORDER BY list LIMIT NUMBER
    (6) select -> SELECT . list FROM table WHERE predicates GROUP BY list ORDER BY list
    (7) select -> SELECT . list FROM table WHERE predicates GROUP BY list HAVING predicates LIMIT NUMBER
    (8) select -> SELECT . list FROM table WHERE predicates GROUP BY list HAVING predicates
    (9) select -> SELECT . list FROM table WHERE predicates GROUP BY list LIMIT NUMBER
    (10) select -> SELECT . list FROM table WHERE predicates ORDER BY list LIMIT NUMBER
    (11) select -> SELECT . list FROM table WHERE predicates ORDER BY list
    (12) select -> SELECT . list FROM table WHERE predicates GROUP BY list
    (13) select -> SELECT . list FROM table WHERE predicates LIMIT NUMBER
    (14) select -> SELECT . list FROM table WHERE predicates
    (15) select -> SELECT . list FROM table GROUP BY list HAVING predicates LIMIT NUMBER
    (16) select -> SELECT . list FROM table GROUP BY list LIMIT NUMBER
    (17) select -> SELECT . list FROM table ORDER BY list LIMIT NUMBER
    (18) select -> SELECT . list FROM table GROUP BY list HAVING predicates
    (19) select -> SELECT . list FROM table GROUP BY list
    (20) select -> SELECT . list FROM table ORDER BY list
    (21) select -> SELECT . list FROM table LIMIT NUMBER
    (22) select -> SELECT . list FROM table
    (79) list -> . PRODUCT
    (80) list -> . NAME
    (81) list -> . NUMBER
    (82) list -> . NUMBER COMMA NUMBER
    (83) list -> . NAME COMMA NAME
    (84) list -> . QTEXT
    (85) list -> . DQUOTES list DQUOTES
    (86) list -> . QUOTES list QUOTES
    (87) list -> . NAME AS NAME
    (88) list -> . NAME DOT NAME
    (89) list -> . list COMMA list
    (90) list -> . list AND NAME
    (91) list -> . list OR NAME
    (92) list -> . agg
    (72) agg -> . SUM LP NAME RP
    (73) agg -> . AVG LP NAME RP
    (74) agg -> . COUNT LP NAME RP
    (75) agg -> . MIN LP NAME RP
    (76) agg -> . MAX LP NAME RP
    (77) agg -> . COUNT LP PRODUCT RP
    (78) agg -> . agg AS NAME

    PRODUCT         shift and go to state 8
    NAME            shift and go to state 9
    NUMBER          shift and go to state 7
    QTEXT           shift and go to state 10
    DQUOTES         shift and go to state 11
    QUOTES          shift and go to state 12
    SUM             shift and go to state 14
    AVG             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17
    MAX             shift and go to state 18

    list                           shift and go to state 6
    agg                            shift and go to state 13

state 5

    (2) query -> LP query . RP

    RP              shift and go to state 19


state 6

    (3) select -> SELECT list . FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list LIMIT NUMBER
    (4) select -> SELECT list . FROM table WHERE predicates GROUP BY list HAVING predicates ORDER BY list
    (5) select -> SELECT list . FROM table WHERE predicates GROUP BY list ORDER BY list LIMIT NUMBER
    (6) select -> SELECT list . FROM table WHERE predicates GROUP BY list ORDER BY list
    (7) select -> SELECT list . FROM table WHERE predicates GROUP BY list HAVING predicates LIMIT NUMBER
    (8) select -> SELECT list . FROM table WHERE predicates GROUP BY list HAVING predicates
    (9) select -> SELECT list . FROM table WHERE predicates GROUP BY list LIMIT NUMBER
    (10) select -> SELECT list . FROM table WHERE predicates ORDER BY list LIMIT NUMBER
    (11) select -> SELECT list . FROM table WHERE predicates ORDER BY list
    (12) select -> SELECT list . FROM table WHERE predicates GROUP BY list
    (13) select -> SELECT list . FROM table WHERE predicates LIMIT NUMBER
    (14) select -> SELECT list . FROM table WHERE predicates
    (15) select -> SELECT list . FROM table GROUP BY list HAVING predicates LIMIT NUMBER
    (16) select -> SELECT list . FROM table GROUP BY list LIMIT NUMBER
    (17) select -> SELECT list . FROM table ORDER BY list LIMIT NUMBER
    (18) select -> SELECT list . FROM table GROUP BY list HAVING predicates
    (19) select -> SELECT list . FROM table GROUP BY list
    (20) select -> SELECT list . FROM table ORDER BY list
    (21) select -> SELECT list . FROM table LIMIT NUMBER
    (22) select -> SELECT list . FROM table
    (89) list -> list . COMMA list
    (90) list -> list . AND NAME
    (91) list -> list . OR NAME

    FROM            shift and go to state 20
    COMMA           shift and go to state 21
    AND             shift and go to state 22
    OR              shift and go to state 23


state 7

    (81) list -> NUMBER .
    (82) list -> NUMBER . COMMA NUMBER

  ! shift/reduce conflict for COMMA resolved as shift
    FROM            reduce using rule 81 (list -> NUMBER .)
    AND             reduce using rule 81 (list -> NUMBER .)
    OR              reduce using rule 81 (list -> NUMBER .)
    DQUOTES         reduce using rule 81 (list -> NUMBER .)
    QUOTES          reduce using rule 81 (list -> NUMBER .)
    GT              reduce using rule 81 (list -> NUMBER .)
    LT              reduce using rule 81 (list -> NUMBER .)
    EQ              reduce using rule 81 (list -> NUMBER .)
    EXLM            reduce using rule 81 (list -> NUMBER .)
    HAVING          reduce using rule 81 (list -> NUMBER .)
    LIMIT           reduce using rule 81 (list -> NUMBER .)
    $end            reduce using rule 81 (list -> NUMBER .)
    RP              reduce using rule 81 (list -> NUMBER .)
    GROUP           reduce using rule 81 (list -> NUMBER .)
    ORDER           reduce using rule 81 (list -> NUMBER .)
    COMMA           shift and go to state 24

  ! COMMA           [ reduce using rule 81 (list -> NUMBER .) ]


state 8

    (79) list -> PRODUCT .

    FROM            reduce using rule 79 (list -> PRODUCT .)
    COMMA           reduce using rule 79 (list -> PRODUCT .)
    AND             reduce using rule 79 (list -> PRODUCT .)
    OR              reduce using rule 79 (list -> PRODUCT .)
    DQUOTES         reduce using rule 79 (list -> PRODUCT .)
    QUOTES          reduce using rule 79 (list -> PRODUCT .)
    GT              reduce using rule 79 (list -> PRODUCT .)
    LT              reduce using rule 79 (list -> PRODUCT .)
    EQ              reduce using rule 79 (list -> PRODUCT .)
    EXLM            reduce using rule 79 (list -> PRODUCT .)
    HAVING          reduce using rule 79 (list -> PRODUCT .)
    LIMIT           reduce using rule 79 (list -> PRODUCT .)
    $end            reduce using rule 79 (list -> PRODUCT .)
    RP              reduce using rule 79 (list -> PRODUCT .)
    GROUP           reduce using rule 79 (list -> PRODUCT .)
    ORDER           reduce using rule 79 (list -> PRODUCT .)


state 9

    (80) list -> NAME .
    (83) list -> NAME . COMMA NAME
    (87) list -> NAME . AS NAME
    (88) list -> NAME . DOT NAME
